tests/errors/semantics/array_type_is_not_constant.odl
main :: () -> void  {
    x := int;
    arr := [1]x;
};